--- a/1.流式布局/10.京东移动端页面/css/normalize.css
+++ b/1.流式布局/10.京东移动端页面/css/normalize.css
@@ -349,3 +349,17 @@ template {
 [hidden] {
   display: none;
 }
+
+a {
+  /* 移动端的a标签在点击的时候会有蓝色的高亮背景 */
+  -webkit-tap-highlight-color: transparent;
+}
+input {
+  /* 移动端若要自定义按钮和输入框的样式，则需要清除默认的样式。 */
+  -webkit-appearance: none;
+}
+img,
+a {
+  /* 移动端长按屏幕会弹出菜单，一般img和a标签禁止长按弹出菜单 */
+  -webkit-touch-callout: none;
+}
