--- a/1.流式布局/10.京东移动端页面/css/index.css
+++ b/1.流式布局/10.京东移动端页面/css/index.css
@@ -5,10 +5,18 @@ body {
   margin: 0 auto;
   font-size: 14px;
   font-family: -apple-system, Helvetica sans-serif;
-  color: #666;
   line-height: 1.5;
-
-  background-color: #666;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+a {
+  color: #313231;
+  text-decoration: none;
+}
+img {
+  vertical-align: middle;
 }
 .header {
   height: 45px;
@@ -49,8 +57,8 @@ ul {
   background-color: #ff4410;
 }
 .search-wrap {
-  position: relative;
-  /* position: fixed; */
+  /* position: relative; */
+  position: fixed;
   width: 100%;
   height: 44px;
   /* 清除浮动 */
@@ -85,7 +93,7 @@ ul {
   line-height: 44px;
 }
 .search {
-  width: 100%;
+  /* width: 100%; */
   height: 30px;
   margin: 0 50px;
   margin-top: 7px;
@@ -131,5 +139,36 @@ ul {
   width: 33.33%;
 }
 .brand > div img {
+  width: 100%;
+}
+/* 由于nav是由子元素撑开的，所以为了不影响后面的元素，必须清楚浮动 */
+nav::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+nav a {
+  float: left;
+  width: 20%;
+  text-align: center;
+  margin-top: 5px;
+}
+nav a img {
+  width: 40px;
+  margin: 5px 0;
+}
+.news {
+  margin-top: 5px;
+}
+.news a {
+  float: left;
+}
+.news a:nth-child(1) {
+  width: 50%;
+}
+.news a:nth-child(2) {
+  width: 50%;
+}
+.news img {
   width: 100%;
 }
