--- a/2.rem适配布局/05.styles.less
+++ b/2.rem适配布局/05.styles.less
@@ -1,4 +1,4 @@
-// 使用vscode的easy less插件将less文件自动编译成css文件
+// 使用vscode的easy less插件在less文件保存时自动编译成css文件
 // 1.less-变量
 @darktheme: rgb(63, 72, 80);
 @font50: 50px;
